[API] complete transfer flow [API] add return privatekey for register
